# Flappy-Bird

./: CMakeLists.txt
include/: background.hpp  bird.hpp  coin.hpp  collisions_checker.hpp  game.hpp  math_helpers.hpp  object.hpp  pipe.hpp  pipe_controller.hpp  score_counter.hpp  texture.hpp
src/: CMakeLists.txt  background.cpp  bird.cpp  coin.cpp  collisions_checker.cpp  game.cpp  main.cpp  math_helpers.cpp  object.cpp  pipe.cpp  pipe_controller.cpp  score_counter.cpp  texture.cpp
